2004-01-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Prefer sigc++ 2.0 over 1.2 to keep things a little
	  more consistent.

2005-01-08  James Turner  <james@worldforge.org>

	* configure.ac: increase minor version number
	
	* tests/Makefile.am: tweak to try and make tests build and run correctly

	* NEWS: add information for the the 1.3.2 release

2005-01-07  James Turner  <james@worldforge.org>

	* Eris/Account.cpp, Eris/Account.h: delay Avatar creation until the 
	  activation INFO is received from the server. This allows errors during
	  character creation or activation to be reported via a new 'AvatarFailure'
	  signal on Account.
	  
	* Eris/Avatar.cpp, Eris/Avatar.h: changes for the new Avatar creation
	  style. The InGame signal is removed since it is no longer meaningful -
	  the 'AvatarSuccess' signal on Account replaces it.
	  
	* test/tests.cpp: update tests for the new Account API, and add a test
	  for correctly handling the error when taking a bad character.

	* Eris/Connection.h, Eris/Connection.cpp, Eris/Account.cpp: ensure that
	  when deleting an Account it correctly removes it's router from the
	  Connection.

2004-01-07  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Remove AM_MAINTAINER_MODE as it has undesirable side
	  effects.

2004-01-03  Al Riddoch  <alriddoch@zepler.org>

	* Eris/TypeService.cpp, Eris/TypeService.h: Add a virtual destructor
	  to TypeService, as it has virtual functions.

2004-12-31  Al Riddoch  <alriddoch@zepler.org>

	* eris.spec.in: Update spec with License URL Package Vendor
	  and Distribution tags.

2004-11-14  James Turner  <james@worldforge.org>

	* Eris/Avatar.cpp: fix initialisation of a dummy position vector.
	  Thanks to erik for the catch.

2004-11-1  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp: change signature of 'valueOfAttr' to return by
	  reference. This entailed pushing all attributes into the primary
	  storage map (including native ones), which means hasAttr and